# onedraw

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-macos.yml
doc/: FAQ.md  index.md  part1.md  part2.md  part3.md  part4.md  part5.md
lib/: Metal.hpp  binning.h  common.h  default_font.h  default_font_atlas.h  font.h  onedraw.cpp  onedraw.h  rasterization.h  renderer.h  sdf2d.h
pre-build/: CMakeLists.txt  arena.h  bc4_encoder.c  bc4_encoder.h  bin2h.c  bin2h.h  builder.c  file_buffer.h  shader_reader.c  shader_reader.h
src/: onedraw.cpp  onedraw.h  renderer.cpp
src/shaders/: binning.metal  common.h  rasterizer.metal
tests/: benchmark.c  minimal.c  sokol_app.h  sokol_app.mm  test.c
